// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component can be nested within Text and Heading 1`] = `
@media  {
  .c-dEwrHQ {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-dEwrHQ:focus,
  .c-dEwrHQ:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-dEwrHQ:active {
    color: var(--colors-primaryDark);
  }

  .c-dyvMgW > .c-dEwrHQ,
  .c-jryFOR > .c-dEwrHQ,
  .c-PJLV > .c-dEwrHQ {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-dEwrHQ::before,
  .c-dyvMgW > .c-dEwrHQ::after,
  .c-jryFOR > .c-dEwrHQ::before,
  .c-jryFOR > .c-dEwrHQ::after,
  .c-PJLV > .c-dEwrHQ::before,
  .c-PJLV > .c-dEwrHQ::after {
    content: none;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-jryFOR {
    font-family: var(--fonts-display);
    font-weight: 700;
    margin: 0;
  }
}

@media  {
  .c-dEwrHQ-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dEwrHQ-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dEwrHQ-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-dEwrHQ-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-dEwrHQ-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-dEwrHQ-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md {
    font-size: var(--fontSizes-xl);
    line-height: 1.14;
  }

  .c-jryFOR-fOoUdm-size-md::before {
    content: '';
    margin-bottom: -0.2174em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md::after {
    content: '';
    margin-top: -0.2254em;
    display: table;
  }
}

<div>
  <p
    class="c-dyvMgW c-dyvMgW-gvmVBy-size-md"
  >
    <button
      class="c-dEwrHQ c-dEwrHQ-gvmVBy-size-md"
    >
      TEXT LINK
    </button>
  </p>
  <h2
    class="c-jryFOR c-jryFOR-fOoUdm-size-md"
  >
    <button
      class="c-dEwrHQ c-dEwrHQ-gvmVBy-size-md"
    >
      HEADING LINK
    </button>
  </h2>
</div>
`;

exports[`Link component renders an anchor 1`] = `
@media  {
  .c-dEwrHQ {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-dEwrHQ:focus,
  .c-dEwrHQ:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-dEwrHQ:active {
    color: var(--colors-primaryDark);
  }

  .c-dyvMgW > .c-dEwrHQ,
  .c-jryFOR > .c-dEwrHQ,
  .c-PJLV > .c-dEwrHQ {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-dEwrHQ::before,
  .c-dyvMgW > .c-dEwrHQ::after,
  .c-jryFOR > .c-dEwrHQ::before,
  .c-jryFOR > .c-dEwrHQ::after,
  .c-PJLV > .c-dEwrHQ::before,
  .c-PJLV > .c-dEwrHQ::after {
    content: none;
  }
}

@media  {
  .c-dEwrHQ-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dEwrHQ-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dEwrHQ-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

<div>
  <a
    class="c-dEwrHQ c-dEwrHQ-gvmVBy-size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
@media  {
  .c-dEwrHQ {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-dEwrHQ:focus,
  .c-dEwrHQ:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-dEwrHQ:active {
    color: var(--colors-primaryDark);
  }

  .c-dyvMgW > .c-dEwrHQ,
  .c-jryFOR > .c-dEwrHQ,
  .c-PJLV > .c-dEwrHQ {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-dEwrHQ::before,
  .c-dyvMgW > .c-dEwrHQ::after,
  .c-jryFOR > .c-dEwrHQ::before,
  .c-jryFOR > .c-dEwrHQ::after,
  .c-PJLV > .c-dEwrHQ::before,
  .c-PJLV > .c-dEwrHQ::after {
    content: none;
  }
}

@media  {
  .c-dEwrHQ-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dEwrHQ-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dEwrHQ-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-dEwrHQ-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-dEwrHQ-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-dEwrHQ-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }
}

<div>
  <a
    class="c-dEwrHQ c-dEwrHQ-jvTRJO-size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
